tests/fixtures/invalid/bad-money-precision.nml
subscription BadPlan:
    name = "Bad"
    monthlyPrice = 19.999 USD
